# snake-game

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  env.template  package-lock.json  package.json
.github/workflows/: static.yml
frontend/: bootstrap.js  index.css  index.html  index.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts  webpack.config.js
frontend/engine/: particles.ts  renderer.ts  sound.ts  storage.ts
frontend/public/: bootstrap.js  index.html  snake_game.d.ts  snake_game.js  snake_game_bg.wasm  snake_game_bg.wasm.d.ts
frontend/utils/: random.js
server/: index.js
src/: lib.rs
src/snake/: mod.rs  tests.rs
src/utils/: mod.rs
src/world/: mod.rs  tests.rs
