[package]
name = "snake_game"
version = "1.0.0"
edition = "2024"
description = "A modern Snake game built with Rust WASM and TypeScript frontend"
authors = ["Your Name <your.email@example.com>"]
license = "ISC"
repository = "https://github.com/yourusername/snake_game"

[dependencies]
wasm-bindgen = "0.2.118"
wee_alloc = "0.4.5"

[lib]
crate-type = ["cdylib", "rlib"]
