[package]
name = "snake_game"
version = "1.2.0"
edition = "2024"
description = "A modern Snake game built with Rust WASM and TypeScript frontend"
authors = ["Your Name <your.email@example.com>"]
license = "ISC"
repository = "https://github.com/yourusername/snake_game"

[dependencies]
wasm-bindgen = "0.2.118"
js-sys = "0.3.77"

[lib]
crate-type = ["cdylib", "rlib"]
